--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,12 @@
-
+<!-- templates/index.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Healthcare Assistant</title>
+</head>
+<body>
+    <h1>Welcome to the AI Healthcare Assistant</h1>
+    <p>This is our MVP setup. More features coming soon!</p>
+</body>
+</html>
