--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,10 @@
     <form action="/submit" method="post" enctype="multipart/form-data">
         <label>Upload Aadhaar Card:</label><br>
         <input type="file" name="aadhar" required><br><br>
-        
+
         <label>Describe Your Symptoms:</label><br>
-        <textarea name="symptom" rows="4" cols="40" placeholder="e.g. fever, fatigue" required></textarea><br><br>
-        
+        <textarea name="symptom" rows="4" cols="50" required></textarea><br><br>
+
         <input type="submit" value="Submit">
     </form>
 </body>
