--- a/templates/result.html
+++ b/templates/result.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>OCR Result</title>
+</head>
+<body>
+    <h2>Extracted Text:</h2>
+    <pre>{{ text }}</pre>
+    <a href="/">Go Back</a>
+</body>
+</html>
 
