--- a/templates/result.html
+++ b/templates/result.html
@@ -4,9 +4,13 @@
     <title>OCR Result</title>
 </head>
 <body>
-    <h2>Extracted Text:</h2>
+    <h1>OCR Result</h1>
+    <p><strong>Text Extracted:</strong></p>
     <pre>{{ text }}</pre>
-    <a href="/">Go Back</a>
+    <hr>
+    <p><strong>Uploaded File:</strong></p>
+    <img src="{{ image_path }}" alt="Uploaded File" style="max-width: 400px;">
+    <br><br>
+    <a href="/">Upload Another</a>
 </body>
 </html>
-
