--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <title>Upload Aadhaar</title>
-</head>
+<head><title>Aadhaar OCR</title></head>
 <body>
-    <h1>Upload Aadhaar Card (PDF or Image)</h1>
-    <form action="/submit" method="post" enctype="multipart/form-data">
-        <input type="file" name="file" required>
-        <input type="submit" value="Upload and Extract Text">
-    </form>
+  <h1>Upload Aadhaar Card</h1>
+  <form action="/submit" method="post" enctype="multipart/form-data">
+    <input type="file" name="file" required>
+    <input type="submit" value="Submit">
+  </form>
 </body>
 </html>
+
