--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
   <div class="hero">
     <h1>CareConnect</h1>
     <p>Your AI-powered assistant for fast, secure and intelligent health assessment.</p>
-    <a href="/symptoms" class="btn btn-glow mt-4">Get Started</a>
+    <a href="/login" class="btn btn-glow mt-4">Get Started</a>
   </div>
 
   <div class="container features text-center">
