--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
   </div>
 
   <div class="footer">
-    © 2025 CareConnect.
+    © 2025 Shadab.
   </div>
 
   <script src="/static/js/home.js"></script>
