--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CareConnect - Login</title>
-  <link rel="stylesheet" href="/static/login.css">
+  <link rel="stylesheet" href="/static/css/login.css">
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
@@ -28,6 +28,6 @@
     </div>
   </div>
 
-  <script src="/static/login.js"></script>
+  <script src="/static/js/login.js"></script>
 </body>
 </html>
