--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="/static/css/login.css">
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script src="https://www.recaptcha.net/recaptcha/api.js" async defer></script>
+
 </head>
 <body>
   <div class="login-wrapper">
