--- a/templates/symptoms.html
+++ b/templates/symptoms.html
@@ -9,15 +9,16 @@
 <body>
   <div class="container">
     <div class="step-bar">
-      <ul>
-        <li class="active">1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li>6</li>
-        <li>7</li>
-      </ul>
+<div class="stepbar">
+    <div class="active">1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
+    <div>6</div>
+    <div>7</div>
+</div>
+
     </div>
 
     <div class="form-box">
